posiGen_FullsendBox/src/objects/Direct_Lease_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Returned_NSF_Date__c</fullName>
        <label>Check Returned NSF Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <label>Confirmation Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Paid</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <label>Lease</label>
        <referenceTo>Lease__c</referenceTo>
        <relationshipLabel>Direct Lease Payments</relationshipLabel>
        <relationshipName>Direct_Lease_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AmEx</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Direct Lease Payment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct Lease Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>